Fix profile image cropper

--- a/src/components/Home/Header/index.css
+++ b/src/components/Home/Header/index.css
@@ -1,6 +1,6 @@
 img{
-    padding-left: 10%;
-    padding-right: 10%;
+    /* padding-left: 10%;
+    padding-right: 10%; */
     marginRight: 'auto';
     height: 100%;
     object-fit: contain;
